--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
-/*your CSS goes here*/
+form input, select {
+	background-color: #ffff99;
+}
+
+.emphasis {
+	font-weight: bold;
+}
+
+p {
+	border: 2px solid black;
+	font-style: italic;
+}
